// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-grid should display a spinner 1`] = `
<p6-grid>
  <mock:shadow-root>
    <div class="row-context-menu undefined"></div>
    <p6-grid-actions></p6-grid-actions>
    <p6-grid-options></p6-grid-options>
    <p6-grid-header>
      <p6-grid-header-cell sortorder="2" width="150">
        First Col
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        Second Col
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        third
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        Last
      </p6-grid-header-cell>
    </p6-grid-header>
    <p6-spinner style="height: 42px; width: 42px; margin-left: auto; margin-right: auto;"></p6-spinner>
    <slot></slot>
  </mock:shadow-root>
</p6-grid>
`;

exports[`p6-grid should display an empty message 1`] = `
<p6-grid>
  <mock:shadow-root>
    <div class="row-context-menu undefined"></div>
    <p6-grid-actions></p6-grid-actions>
    <p6-grid-options></p6-grid-options>
    <p6-grid-header>
      <p6-grid-header-cell sortorder="2" width="150">
        First Col
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        Second Col
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        third
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        Last
      </p6-grid-header-cell>
    </p6-grid-header>
    <p6-empty></p6-empty>
    <slot></slot>
  </mock:shadow-root>
</p6-grid>
`;

exports[`p6-grid should render a grid with on row 1`] = `
<p6-grid>
  <mock:shadow-root>
    <div class="row-context-menu undefined"></div>
    <p6-grid-actions></p6-grid-actions>
    <p6-grid-options></p6-grid-options>
    <p6-grid-header>
      <p6-grid-header-cell sortorder="2" width="150">
        First Col
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        Second Col
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        third
      </p6-grid-header-cell>
      <p6-grid-header-cell sortorder="2" width="100">
        Last
      </p6-grid-header-cell>
    </p6-grid-header>
    <p6-grid-body>
      <p6-grid-row>
        <p6-grid-cell align="1" editable="" width="150">
          row(1) - col(first)
        </p6-grid-cell>
        <p6-grid-cell align="2" editable="" width="100">
          row(1) - col(second)
        </p6-grid-cell>
        <p6-grid-cell align="1" editable="" width="100">
          row(1) - col(third)
        </p6-grid-cell>
        <p6-grid-cell align="1" width="100">
          row(1) - col(first)-row(1) - col(second)-row(1) - col(third)
        </p6-grid-cell>
      </p6-grid-row>
      <p6-grid-row>
        <p6-grid-cell align="1" editable="" width="150">
          row(2) - col(first)
        </p6-grid-cell>
        <p6-grid-cell align="2" editable="" width="100">
          row(2) - col(second)
        </p6-grid-cell>
        <p6-grid-cell align="1" editable="" width="100">
          row(2) - col(third)
        </p6-grid-cell>
        <p6-grid-cell align="1" width="100">
          row(2) - col(first)-row(2) - col(second)-row(2) - col(third)-row(2) - col(Fourth)
        </p6-grid-cell>
      </p6-grid-row>
      <p6-grid-row>
        <p6-grid-cell align="1" editable="" width="150">
          row(3) - col(first)
        </p6-grid-cell>
        <p6-grid-cell align="2" editable="" width="100">
          row(3) - col(second)
        </p6-grid-cell>
        <p6-grid-cell align="1" editable="" width="100">
          row(3) - col(third)
        </p6-grid-cell>
        <p6-grid-cell align="1" width="100">
          row(3) - col(first)-row(3) - col(second)-row(3) - col(third)
        </p6-grid-cell>
      </p6-grid-row>
      <p6-grid-row>
        <p6-grid-cell align="1" editable="" width="150">
          row(4) - col(first)
        </p6-grid-cell>
        <p6-grid-cell align="2" editable="" width="100">
          row(4) - col(second)
        </p6-grid-cell>
        <p6-grid-cell align="1" editable="" width="100">
          row(4) - col(third)
        </p6-grid-cell>
        <p6-grid-cell align="1" width="100">
          row(4) - col(first)-row(4) - col(second)-row(4) - col(third)
        </p6-grid-cell>
      </p6-grid-row>
      <p6-grid-row>
        <p6-grid-cell align="1" editable="" width="150">
          row(5) - col(first)
        </p6-grid-cell>
        <p6-grid-cell align="2" editable="" width="100">
          row(5) - col(second)
        </p6-grid-cell>
        <p6-grid-cell align="1" editable="" width="100">
          row(5) - col(third)
        </p6-grid-cell>
        <p6-grid-cell align="1" width="100">
          row(5) - col(first)-row(5) - col(second)-row(5) - col(third)
        </p6-grid-cell>
      </p6-grid-row>
      <p6-grid-row>
        <p6-grid-cell align="1" editable="" width="150">
          row(6) - col(first)
        </p6-grid-cell>
        <p6-grid-cell align="2" editable="" width="100">
          row(6) - col(second)
        </p6-grid-cell>
        <p6-grid-cell align="1" editable="" width="100">
          row(6) - col(third)
        </p6-grid-cell>
        <p6-grid-cell align="1" width="100">
          row(6) - col(first)-row(6) - col(second)-row(6) - col(third)-row(6) - col(Fourth)-row(6) - col(Fourth)
        </p6-grid-cell>
      </p6-grid-row>
    </p6-grid-body>
    <slot></slot>
  </mock:shadow-root>
</p6-grid>
`;

exports[`p6-grid should render an empty grid 1`] = `
<p6-grid>
  <mock:shadow-root></mock:shadow-root>
</p6-grid>
`;
